Fix z-index and height for sidebar component

--- a/src/layout/layoutWithSidebar.module.scss
+++ b/src/layout/layoutWithSidebar.module.scss
@@ -49,7 +49,7 @@ $sidebar-tab-width: 3em;
     }
 }
 .aside {
-    z-index: 100;
+    z-index: 9;
     max-width: 500px;
     overflow: hidden;
     padding: spacing.$padding-s;
@@ -60,7 +60,7 @@ $sidebar-tab-width: 3em;
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: 90%;
         transition: left 0.3s ease;
         &.closed {
             z-index: 10;
